mudando para que os dispositivos do refeitorio também sejam dispositivos de entrada